src/test/resources/valid/hex-literal.c
int foo() {
  return 0xcafe;
}
