src/test/resources/parse-error/call-var.c
int f(int x) {
  return x(13);
}
